test/extern/bradc/classes/extern_subclasses.good
extern_subclasses.chpl:5: syntax error: cannot declare class types as export or extern
extern_subclasses.chpl:9: syntax error: cannot declare class types as export or extern
extern_subclasses.chpl:13: syntax error: cannot declare class types as export or extern
